<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        tools:context=".MainActivity" android:background="@color/colorLightPrimary">
    <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp" app:srcCompat="@drawable/pedra"
            android:id="@+id/ivRock"
            android:background="@color/colorLightPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/ivPaper"
            android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp" app:srcCompat="@drawable/papel"
            android:id="@+id/ivPaper"
            android:background="@color/colorLightPrimary"
            app:layout_constraintStart_toEndOf="@+id/ivRock"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/ivScissors"
            android:layout_marginBottom="56dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivRock" app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:layout_width="96dp"
            android:layout_height="96dp" app:srcCompat="@drawable/tesoura"
            android:id="@+id/ivScissors"
            android:background="@color/colorLightPrimary"
            app:layout_constraintStart_toEndOf="@+id/ivPaper"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="56dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivPaper" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            style="@style/label"
            android:text="@string/label_rock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvRockLabel"
            app:layout_constraintStart_toStartOf="@+id/ivRock"
            app:layout_constraintEnd_toEndOf="@+id/ivRock"
            app:layout_constraintHorizontal_bias="0.378" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivRock"/>
    <TextView
            style="@style/label"
            android:text="@string/label_paper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/ivPaper"
            app:layout_constraintEnd_toEndOf="@+id/ivPaper" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivPaper"/>
    <TextView
            style="@style/label"
            android:text="@string/label_scissors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/ivScissors"
            app:layout_constraintEnd_toEndOf="@+id/ivScissors" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivScissors"/>
    <TextView
            style="@style/choose_move"
            android:text="@string/label_choose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/ivRock"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/ivScissors"
            android:layout_marginEnd="8dp" android:layout_marginBottom="148dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498"/>
    <TextView
            style="@style/title"
            android:text="@string/label_last_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/textView7"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.286"/>
    <ImageView
            android:layout_width="135dp"
            android:layout_height="135dp"
            tools:srcCompat="@drawable/papel"
            android:id="@+id/ivYou"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/ivAndroid"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="156dp"/>
    <ImageView
            android:layout_width="135dp"
            android:layout_height="135dp"
            tools:srcCompat="@drawable/papel"
            android:id="@+id/ivAndroid"
            app:layout_constraintStart_toEndOf="@+id/ivYou" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivYou"/>
    <TextView
            style="@style/label"
            android:text="@string/label_you"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/ivYou"
            app:layout_constraintEnd_toEndOf="@+id/ivYou" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ivYou"/>
    <TextView
            style="@style/label"
            android:text="@string/label_android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            app:layout_constraintStart_toStartOf="@+id/ivAndroid"
            app:layout_constraintEnd_toEndOf="@+id/ivAndroid" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ivAndroid"/>
    <TextView
            style="@style/result"
            tools:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvResult"
            app:layout_constraintStart_toStartOf="@+id/ivYou"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/ivAndroid"
            android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ivYou" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/textView5"/>
</android.support.constraint.ConstraintLayout>